--- a/.postgresSQL/docker-compose-stack.yml
+++ b/.postgresSQL/docker-compose-stack.yml
@@ -7,7 +7,12 @@ services:
     image: postgres
     restart: always
     environment:
-      POSTGRES_PASSWORD: example
+      - POSTGRES_PASSWORD: example
+      - POSTGRES_USER: paratodos
+    volumes:
+      - postgres:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
 
   adminer:
     image: adminer
