--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/swagger": "^7.0.12",
     "@prisma/client": "^4.16.2",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^4.6.3"
