Validation fixings, filters, not found exception and roles allowed

--- a/.env
+++ b/.env
@@ -4,4 +4,17 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+
+#LOCAL - BEGIN
 DATABASE_URL="postgresql://postgres:example@localhost:5432/postgres?schema=public"
+#LOCAL - END
+
+# #REMOTE - BEGIN
+# DATABASE_URL="postgres://default:N4VqrSx8XknI@ep-sweet-wave-620969-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
+# POSTGRES_URL="postgres://default:N4VqrSx8XknI@ep-sweet-wave-620969-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+# POSTGRES_URL_NON_POOLING="postgres://default:N4VqrSx8XknI@ep-sweet-wave-620969.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+# POSTGRES_USER="default"
+# POSTGRES_HOST="ep-sweet-wave-620969-pooler.us-east-1.postgres.vercel-storage.com"
+# POSTGRES_PASSWORD="N4VqrSx8XknI"
+# POSTGRES_DATABASE="verceldb"
+#REMOTE - END
